--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/dependency-injection": "^3.4.3|^4.0.3",
         "symfony/templating": "^2.7|^3.0|^4.0",
         "symfony/options-resolver": "^4.0",
-        "symfony/swiftmailer-bundle": "^3.2"
+        "symfony/swiftmailer-bundle": "^3.2",
+        "mandrill/mandrill": "^1.0"
     },
     "minimum-stability": "dev"
 }
